[package]
name = "cw-bidding"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test"]

[dependencies]
cosmwasm-std = "1.1"
cw2 = "1.0.1"
cw-storage-plus = "1.0"
cw-multi-test = { version = "0.16", optional = true }
schemars = "0.8"
cosmwasm-schema = "1.1"
serde = "1.0"
thiserror = "1.0"

[dev-dependencies]
cw-multi-test = "0.16"
